infra/nginx-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-client-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-client
  template:
    metadata:
      name: nginx-client-pod
      labels:
        app: nginx-client
    spec:
      containers:
        - name: nginx
          image: client
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: NodePort
  selector:
    app: nginx-client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
      nodePort: 30005
