infra/nginx-comments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-comments-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-comments
  template:
    metadata:
      name: nginx-comments-pod
      labels:
        app: nginx-comments
    spec:
      containers:
        - name: nginx
          image: comments
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4001

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-comments-service
spec:
  type: NodePort
  selector:
    app: nginx-comments
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
      nodePort: 30006
