infra/nginx-event-bus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-event-bus-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-event-bus
  template:
    metadata:
      name: nginx-event-bus-pod
      labels:
        app: nginx-event-bus
    spec:
      containers:
        - name: nginx
          image: event-bus
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4005

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-event-bus-service
spec:
  type: NodePort
  selector:
    app: event-bus-srv
  ports:
    - protocol: TCP
      port: 4005
      targetPort: 4005
      nodePort: 30010
