infra/nginx-query-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-query-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-query
  template:
    metadata:
      name: nginx-query-pod
      labels:
        app: nginx-query
    spec:
      containers:
        - name: nginx
          image: query
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4002

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-query-service
spec:
  type: NodePort
  selector:
    app: nginx-query
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
      nodePort: 30015
